tests/fixtures/negative/style/BracesOnWhenStatements.kt
package style

fun example(x: Int): String {
    return when (x) {
        1 -> {
            "one"
        }
        2 -> {
            "two"
        }
        else -> {
            "other"
        }
    }
}
